# ai-llm-stepik

./: .gitignore  README.md  pyproject.toml  requirements.txt
01_llm-intro/: 01_ollama_model_list.py  02_ollama_ans.py  03_ollama_stream_ans.py  04_ollama_chat.py  README.md  conifg.py
02_openai_prompt/: 01_mistral_openai.py  02_ollama_openai.py  03_zero_shot.py  04_few_shot.py  05_CoT.py  06_zero_shot_CoT.py  07_hw.py  08_open_router.py  README.md
03_langchain/: 01_langchain_ollama.py  02_prompt_template.py  03_outputparser.py  04_hw.py  05_chatbot.py  README.md  requirements.txt
04_tools_agents/: 01_tool_langchain.py  02_hw.py  03_agent_tool_with_hist.py  04_langgraph_example.py  05_langgraph_agent.py  README.MD  requirements.txt
05_RAG_langchain/: 01_bm25_rag.py  02_mistral_emb_rag.py  03_doc_spit.py  README.md  requirements.txt
06_debugging_arize_phoenix/: 01_tracing.py  02_evaluation.py  02_load_dataset.py  requirements.txt
06_debuging_arize_phoenix/: 01_tracing.py  README.md  requirements.txt
07_chainlit/: 01_chatbot.py  02_rag_ui.py  README.md  datalayer.py  requirements.txt
08_FastAPI/: 02_lifespan.py  03_auth.py  README.MD  requirements.txt
08_FastAPI/01_books/: books.json
09_docker/: 01_fastapi.py  Dockerfile  README.md
09_docker/01_dockerfile/: pyproject.toml
09_docker/02_docker-compose/: docker-compose.yml
10_DataBase/: 01_async_example.py  02_ asyncpg_types.py  02_init_db.py  README.MD  pg_start.txt
10_DataBase/02_pg_types/: asyncpg_example.py  init_db.py
10_DataBase/03_transactions/: fastapi_pool.py  init_db.py  transactions.py
(+16 files in other folders)
