[project]
name = "ai-llm-stepik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
chainlit = [
    "chainlit>=2.9.4",
    "dotenv>=0.9.9",
    "langchain>=1.2.1",
    "langchain-community>=0.4.1",
    "langchain-mistralai>=1.1.1",
    "pypdf>=6.5.0",
]
database = [
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
]
fastapi = [
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.128.0",
    "passlib>=1.7.4",
]
